avoid using sun internal api for base64 encoding by using this third-party, public domain class